--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Portfolio - Max Lebedinsky / front-end developer</title>
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://kit.fontawesome.com/15cdd4c2be.js" crossorigin="anonymous"></script>
-    <!-- <script src="./scripts/main.js" defer></script> -->
 </head>
 
 <body>
@@ -59,9 +58,6 @@
                     <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
                 </div>
             </section>
-
-
-
 
             <section class="portfolio-item" onclick="location.href='./pages/building.html'">
                 <div class="portfolio-item-left">
@@ -153,18 +149,37 @@
                 </div>
             </section>
 
-            <section class="portfolio-item">
-                item #3
+            <section class="portfolio-item" onclick="location.href='./pages/vert-slider.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/vert-slider.png" alt="vertical slider">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Vertical Slider</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/vert-slider.html"
+                                        onclick="event.stopPropagation()" target="_blank">vert-slider.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/vert-slider.js"
+                                        onclick="event.stopPropagation()" target="_blank">vert-slider.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/vert-slider.css"
+                                        onclick="event.stopPropagation()" target="_blank">vert-slider.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Click buttons, scroll mouse or press UP and DOWN keys</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                </div>
             </section>
-            <section class="portfolio-item">
-                item #4
-            </section>
-            <section class="portfolio-item">
-                item #5
-            </section>
+
         </div>
     </main>
-    <!-- <script src="./scripts/main.js"></script> -->
 </body>
 
 </html>
