--- a/pages/follower.html
+++ b/pages/follower.html
@@ -15,36 +15,36 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="title">
-                <p class="name">Максим Лебединский</p>
+            <div>
+                <a href="../index.html" class="name">Максим Лебединский</a>
                 <p class="subtitle">Front-end разработчик</p>
             </div>
             <nav class="navigation">
                 <a href="../index.html" class="nav-item">Портфолио</a>
-                <a href="#" class="nav-item">Резюме</a>
-                <a href="./contacts.html" class="nav-item">Контакты</a>
+                <a href="../pages/resume.html" class="nav-item">Резюме</a>
+                <a href="../pages/contacts.html" class="nav-item">Контакты</a>
             </nav>
         </div>
     </header>
     <main>
         <h1>Perspective Follower</h1>
         <div class="wrapper frame">
-            <div class="annotation">
-                <p class="portfolio-item-text">
-                    Cat tracks mouse movements
-                </p>
-                <p class="portfolio-item-text">
-                    Click the buttons to change the cursor
-                </p>
-            </div>
             <div id="top">
+                <div class="annotation">
+                    <p class="portfolio-item-text">
+                        Cat tracks mouse movements
+                    </p>
+                    <p class="portfolio-item-text">
+                        Click the buttons to change the cursor
+                    </p>
+                </div>
                 <div class="perspective">
                     <div class="card">
                         <div class="thumb"></div>
                         <h2>Si quis amat piscem, debet sua crura madere*</h2>
                         <div class="buttons">
-                            <button id="fish" class="button">Fish</button>
                             <button id="mouse" class="button">Mouse</button>
+                            <button id="fish" class="button">Fish</button>
                             <button id="reset" class="button">Reset</button>
                         </div>
                         <div class="translation">
