--- a/pages/resume.html
+++ b/pages/resume.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts / Portfolio - Max Lebedinsky / front-end developer</title>
+    <title>Resume / Portfolio - Max Lebedinsky / front-end developer</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 
@@ -18,13 +18,13 @@
             </div>
             <nav class="navigation">
                 <a href="../index.html" class="nav-item">Портфолио</a>
-                <a href="./resume.html" class="nav-item">Резюме</a>
-                <a href="./contacts.html" class="nav-item selected">Контакты</a>
+                <a href="./resume.html" class="nav-item selected">Резюме</a>
+                <a href="./contacts.html" class="nav-item">Контакты</a>
             </nav>
         </div>
     </header>
     <main>
-        <h1>Contacts</h1>
+        <h1>Resume</h1>
     </main>
 </body>
 
