--- a/pages/drag-n-drop.html
+++ b/pages/drag-n-drop.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Max Lebedinsky / front-end developer</title>
+    <title>Drag-n-Drop sample / Portfolio - Max Lebedinsky / front-end developer</title>
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/cube.css">
-    <script src="../scripts/cube.js"></script>
+    <link rel="stylesheet" href="../styles/drag-n-drop.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" defer></script> -->
+    <script src="../scripts/drag-n-drop.js" defer></script>
 </head>
 
 <body>
@@ -26,23 +27,21 @@
         </div>
     </header>
     <main>
-        <h1>3D Cube</h1>
+        <h1>Drag-n-Drop sample</h1>
         <div class="wrapper frame">
-            <div class="annotation">
-                <p class="portfolio-item-text">
-                    <b>Rotate</b> – click and drag
-                </p>
-                <p class="portfolio-item-text">
-                    <b>Zoom</b> – scroll mouse wheel
-                </p>
+            <div class="row">
+                <div class="col-header start">To do</div>
+                <div class="col-header progress">In progress</div>
+                <div class="col-header done">Done</div>
             </div>
-            <section data-camera="data-camera">
-                <section class="test" data-scene="data-scene">
-                    <div class="cuboid" data-3d="data-3d">
-                        <div></div>
-                    </div>
-                </section>
-            </section>
+
+            <div class="row">
+                <div class="placeholder">
+                    <div class="item" draggable="true">Drag me</div>
+                </div>
+                <div class="placeholder"></div>
+                <div class="placeholder"></div>
+            </div>
         </div>
     </main>
 </body>
