--- a/pages/snake.html
+++ b/pages/snake.html
@@ -14,14 +14,14 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="title">
-                <p class="name">Максим Лебединский</p>
+            <div>
+                <a href="../index.html" class="name">Максим Лебединский</a>
                 <p class="subtitle">Front-end разработчик</p>
             </div>
             <nav class="navigation">
                 <a href="../index.html" class="nav-item">Портфолио</a>
-                <a href="#" class="nav-item">Резюме</a>
-                <a href="./contacts.html" class="nav-item">Контакты</a>
+                <a href="../pages/resume.html" class="nav-item">Резюме</a>
+                <a href="../pages/contacts.html" class="nav-item">Контакты</a>
             </nav>
         </div>
     </header>
