started task board item

--- a/index.html
+++ b/index.html
@@ -207,6 +207,37 @@
                 </div>
             </section>
 
+            <section class="portfolio-item" onclick="location.href='./pages/task-board.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/task-board.png" alt="task-board">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Task Board</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/drag-n-drop.html"
+                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/drag-n-drop.js"
+                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/drag-n-drop.css"
+                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Drag tasks from one board to another</li>
+                        <li>Add new tasks or even new boards</li>
+                        <li>Delete tasks by double-click</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                </div>
+            </section>
+
         </div>
     </main>
 </body>
