--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
                         <div class="github-popup-opener" onclick="event.stopPropagation()">
                             <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
                                 <div class="github-popup-content">
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/drag-n-drop.html"
-                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.HTML</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/drag-n-drop.js"
-                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.JS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/drag-n-drop.css"
-                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/task-board.html"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/task-board.css"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.CSS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
                                         onclick="event.stopPropagation()" target="_blank">main.CSS</a>
                                 </div>
@@ -232,7 +232,7 @@
                     <ul>
                         <li>Drag tasks from one board to another</li>
                         <li>Add new tasks or even new boards</li>
-                        <li>Delete tasks by double-click</li>
+                        <li>Delete tasks and boards</li>
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
                 </div>
