started bouncing box item: objects positioned and styled

--- a/index.html
+++ b/index.html
@@ -238,6 +238,37 @@
                 </div>
             </section>
 
+            <section class="portfolio-item" onclick="location.href='./pages/bouncing-ball.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/bouncing-ball.png" alt="bouncing-ball">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Bouncing Ball</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/task-board.html"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/task-board.css"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Drag tasks from one board to another</li>
+                        <li>Add new tasks or even new boards</li>
+                        <li>Delete tasks and boards</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                </div>
+            </section>
+
         </div>
     </main>
 </body>
