integrated ball to wrapping frame

--- a/index.html
+++ b/index.html
@@ -248,12 +248,10 @@
                         <div class="github-popup-opener" onclick="event.stopPropagation()">
                             <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
                                 <div class="github-popup-content">
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/task-board.html"
-                                        onclick="event.stopPropagation()" target="_blank">task-board.HTML</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
-                                        onclick="event.stopPropagation()" target="_blank">task-board.JS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/task-board.css"
-                                        onclick="event.stopPropagation()" target="_blank">task-board.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/bouncing-ball.html"
+                                        onclick="event.stopPropagation()" target="_blank">bouncing-ball.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/bouncing-ball.css"
+                                        onclick="event.stopPropagation()" target="_blank">bouncing-ball.CSS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
                                         onclick="event.stopPropagation()" target="_blank">main.CSS</a>
                                 </div>
@@ -261,11 +259,11 @@
                         </div>
                     </div>
                     <ul>
-                        <li>Drag tasks from one board to another</li>
-                        <li>Add new tasks or even new boards</li>
-                        <li>Delete tasks and boards</li>
+                        <li>Animated ball and its shadow</li>
+                        <li>Animated box height</li>
+                        <li>Rotating scene</li>
                     </ul>
-                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                    <p class="portfolio-item-right-footer">HTML / SCSS</p>
                 </div>
             </section>
 
