--- a/pages/bouncing-ball.html
+++ b/pages/bouncing-ball.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <div class="header-content">
             <div>
                 <a href="../index.html" class="name">Максим Лебединский</a>
@@ -23,27 +23,26 @@
                 <a href="../pages/contacts.html" class="nav-item">Контакты</a>
             </nav>
         </div>
-    </header> -->
-    <!-- <main> -->
-    <!-- <h1>Task Board</h1>
+    </header>
+    <main>
+        <h1>Bouncing Ball</h1>
         <div class="wrapper frame">
-
-        </div> -->
-    <div class="scene">
-        <div class="floor"></div>
-        <div class="cube">
-            <div class="front"></div>
-            <div class="back"></div>
-            <div class="left"></div>
-            <div class="right"></div>
-            <div class="top">
-                <div class="ball-shadow"></div>
+            <div class="scene">
+                <div class="floor"></div>
+                <div class="cube">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                    <div class="left"></div>
+                    <div class="right"></div>
+                    <div class="top">
+                        <div class="ball-shadow"></div>
+                    </div>
+                    <div class="bottom"></div>
+                </div>
+                <div class="ball"></div>
             </div>
-            <div class="bottom"></div>
         </div>
-        <div class="ball"></div>
-    </div>
-    <!-- </main> -->
+    </main>
 </body>
 
 </html>
