added thumbnail for bouncing ball

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
             <section class="portfolio-item" onclick="location.href='./pages/bouncing-ball.html'">
                 <div class="portfolio-item-left">
-                    <img src="images/bouncing-ball.png" alt="bouncing-ball">
+                    <img src="images/bouncing-ball.jpg" alt="bouncing-ball">
                 </div>
                 <div class="portfolio-item-right">
                     <div class="portfolio-item-right-header">
