--- a/index.html
+++ b/index.html
@@ -261,9 +261,40 @@
                     <ul>
                         <li>Animated ball and its shadow</li>
                         <li>Animated box height</li>
-                        <li>Rotating scene</li>
+                        <li>Rotating scene with animated camera angle</li>
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / SCSS</p>
+                </div>
+            </section>
+
+            <section class="portfolio-item" onclick="location.href='./pages/expanding-panels.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/expanding-panels.png" alt="expanding-panels">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Expanding Panels</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/expanding-panels.html"
+                                        onclick="event.stopPropagation()" target="_blank">expanding-panels.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
+                                        onclick="event.stopPropagation()" target="_blank">expanding-panels.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/expanding-panels.css"
+                                        onclick="event.stopPropagation()" target="_blank">expanding-panels.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Panels expanding by click</li>
+                        <li>Appearing titles for each panel</li>
+                        <li>Auto resizing and darkening inactive panels</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
                 </div>
             </section>
 
