added aiming practice item

--- a/index.html
+++ b/index.html
@@ -279,10 +279,41 @@
                                 <div class="github-popup-content">
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/expanding-panels.html"
                                         onclick="event.stopPropagation()" target="_blank">expanding-panels.HTML</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/expanding-panels.js"
                                         onclick="event.stopPropagation()" target="_blank">expanding-panels.JS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/expanding-panels.css"
                                         onclick="event.stopPropagation()" target="_blank">expanding-panels.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Panels expanding by click</li>
+                        <li>Appearing titles for each panel</li>
+                        <li>Auto resizing and darkening inactive panels</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                </div>
+            </section>
+
+            <section class="portfolio-item" onclick="location.href='./pages/aiming-practice.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/aiming-practice.png" alt="Aiming Practice Game">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Aiming Practice Game</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/aiming-practice.html"
+                                        onclick="event.stopPropagation()" target="_blank">aiming-practice.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/aiming-practice.js"
+                                        onclick="event.stopPropagation()" target="_blank">aiming-practice.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/aiming-practice.css"
+                                        onclick="event.stopPropagation()" target="_blank">aiming-practice.CSS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
                                         onclick="event.stopPropagation()" target="_blank">main.CSS</a>
                                 </div>
