fixed restart in aiming practice

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
                         </div>
                     </div>
                     <ul>
-                        <li>Panels expanding by click</li>
-                        <li>Appearing titles for each panel</li>
-                        <li>Auto resizing and darkening inactive panels</li>
+                        <li>Shoot targets as fast as you can</li>
+                        <li>Time options available</li>
+                        <li>Randomized target position, size and color</li>
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
                 </div>
