--- a/pages/task-board.html
+++ b/pages/task-board.html
@@ -38,10 +38,10 @@
                             <div class="list-item" draggable="true">DRAG ME &#10132;
                                 <i class="fas fa-times close-card-btn"></i>
                             </div>
-                            <div class="list-item" draggable="true">Add new task
+                            <div class="list-item" draggable="true">Feed the cat
                                 <i class="fas fa-times close-card-btn"></i>
                             </div>
-                            <div class="list-item" draggable="true">Delete this task
+                            <div class="list-item" draggable="true">Rule the world
                                 <i class="fas fa-times close-card-btn"></i>
                             </div>
                         </div>
@@ -65,7 +65,7 @@
                     <div class="boards-item">
                         <span contenteditable="true" class="title">Done</span>
                         <div class="list">
-                            <div class="list-item" draggable="true">Add new board
+                            <div class="list-item" draggable="true">Have a coffee
                                 <i class="fas fa-times close-card-btn"></i>
                             </div>
                         </div>
