added buttons; disabled mouse move reactions

--- a/pages/bouncing-ball.html
+++ b/pages/bouncing-ball.html
@@ -30,7 +30,18 @@
             <div class="scene">
                 <div class="floor"></div>
                 <div class="cube">
-                    <div class="front"></div>
+                    <div class="front">
+                        <div class="buttons">
+                            <p>Bounce</p>
+                            <button id="stop" class="button">Stop</button>
+                            <button id="start" class="button disabled">Start</button>
+                        </div>
+                        <div class="buttons rotation">
+                            <p>Rotation</p>
+                            <button id="stop-rotation" class="button">Stop</button>
+                            <button id="start-rotation" class="button disabled">Start</button>
+                        </div>
+                    </div>
                     <div class="back"></div>
                     <div class="left"></div>
                     <div class="right"></div>
